--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,8 +1,8 @@
-:root {
-  background-image: url('./assets/background.png');
-  background-size: cover;
-  background-color: #244bc5;
-  background-repeat: no-repeat;
-  min-height: 100vh;
-  width: 100%;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@layer base {
+  :root {
+    --radius: 0.5rem
+  }
 }
